webserver-node/configs/redis.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "redis"
  labels:
    app: "redis"
spec:
  containers:
    - name: "redis"
      image: "redis:alpine"
      command: ["redis-server"]
      args: ["--requirepass", "redispassword"]
      ports:
        - containerPort: 6379

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "redis"
spec:
  selector:
    app: "redis"
  ports:
    - protocol: "TCP"
      port: 6379
      targetPort: 6379
  type: "NodePort"
